# prompt-ignite

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: ci-test.yaml
scripts/: run-help.sh  run-unit-tests.sh  run.sh  setup-local.sh
src/: config.py  entities.py  experiment.py  experiment_handler.py  experiment_manager.py  main.py  new_experiment.py  prompt_flow_experiment.py
src/artefacts/: TEMPLATE-README.md
src/experiments/: base_experiment.py  jupytor_notebook.py  prompt_flow.py  prompty.py  pure_python.py
test/: experiment_handler_test.py  experiment_manager_test.py  new_experiment_test.py  prompt_flow_experiment_test.py
test/experiments/: prompt_flow_test.py
