[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.0"
promptflow = "^1.6.0"
promptflow-tools = "^1.3.0"
ipython = "^8.22.2"
ipykernel = "^6.29.3"
nbstripout = "^0.7.1"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 240
target-version = "py311"
show-fixes = true
select = [
    "B0",     # bugbear
    "E",      # default
    "F",      # default
    "I",      # isort
    "UP",     # pyupgrade
    "RUF100", # valid noqa annnotations
]
ignore = ["E501"] # 79 chars PEP 8 style is skipped

src = ["src"]

[tool.pyright]
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = "error"
reportMissingTypeStubs = false
